# Breakout-SDL2

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
cmake/sdl2/: FindSDL2_net.cmake
cmake/switch/: Switch.cmake
libs/SDL2/: sdl2-config.cmake
libs/SDL2/docs/: README-porting.md
psp/: MakeFile  Makefile
resources/controller/: gamecontrollerdb.txt
resources/scripts/: main.lua  player.lua  scene1.lua
resources/scripts/libs/: callbacks.lua  init.lua  input.lua  resources.lua  scene.lua  scripting.lua  types.lua  vector.lua
src/: main.cpp
src/audio/: Audio.h  AudioManager.cpp  AudioManager.h
src/canvas/: Canvas.cpp  Canvas.h  UIElements.cpp  UIElements.h
src/consts/: game.h  logger.h
src/engine/: CMakeLists.txt
src/engine/audio/: Audio.h  AudioManager.cpp  AudioManager.h
src/engine/canvas/: Canvas.cpp  Canvas.h  UIElements.cpp  UIElements.h
src/engine/consts/: functions.h  game.h  logger.h
src/engine/events/: EventManager.cpp  EventManager.h
src/engine/events/input/: GameController.cpp  GameController.h
src/engine/math/: Vector.h
src/engine/nodes/: Node.cpp  Node.h  Transform.cpp  Transform.h
src/engine/nodes/graphics/: SpriteNode.cpp  SpriteNode.h
src/engine/nodes/lua/: all.h
src/engine/physics/: PhysicsWorld.h
src/engine/render/: Graphics.h  SDLRender.cpp  SDLRender.h  Text.cpp  Text.h
src/engine/resourceManager/: AssetsManager.cpp  AssetsManager.h
src/engine/scenes/: LuaScene.cpp  LuaScene.h  Scene.h  SceneManager.cpp  SceneManager.h
src/engine/scripting/: LuaGameObject.h  ScriptManager.cpp  ScriptManager.h
src/events/: EventManager.cpp  EventManager.h  eventManager.cpp  eventManager.h
src/events/input/: GameController.cpp  GameController.h
src/game/: Block.cpp  Block.h  SceneManager.cpp  SceneManager.h
src/game/player/: Ball.cpp  Ball.h  Player.cpp  Player.h
src/game/scenes/: GameScene.cpp  GameScene.h  Scene.h
src/math/: Vector.h
src/player/: Ball.cpp  Ball.h  Player.cpp  Player.h  player.cpp  player.h
src/render/: Graphics.h  SDLRender.cpp  SDLRender.h  Text.cpp  Text.h
src/resourceManager/: AssetsManager.cpp  AssetsManager.h  assetsManager.cpp  assetsManager.h
